--- a/mc-bots/remote_control_ui.css
+++ b/mc-bots/remote_control_ui.css
@@ -109,7 +109,8 @@ h1 {
   position: relative;
   display: flex;
   flex-direction: column;
-  min-height: 120px;
+  height: 280px;
+  min-height: fit-content;
 }
 .card--wide { grid-column: 1 / -1; }
 .card-head {
